--- a/OUT.ini
+++ b/OUT.ini
@@ -6,6 +6,7 @@ ICT1004=Web Systems and Technologies.
 ICT1005=Mathematics and Statistics for ICT.
 ICT1010=Computer Networks
 SIT=SIT is an autonomous university in Singapore.
+the=#*@^%
 the ICT Cluster=The ICT Cluster offers degrees in software engineering, information security and telematics.
 
 [where]
@@ -13,5 +14,6 @@ SIT=SIT has a main campus at Dover plus a building at each of Singapore's polyte
 the ICT Cluster=Software engineering and information security are taught at SIT@NYP, while telematics is taught at SIT@Dover.
 
 [who]
+Shaun=The team Carry.
 Wang Zhengkui=Zhengkui teaches the Python section of ICT1002.
 Frank Guan=Frank teaches the C section of ICT1002.
